elisp.eclass
	15 Mar 2007
	documented
	added some quotes to prevent variables with spaces to break commands
	removed local Emacs variables

elisp-common.eclass
	15 Mar 2007
	documented
	added some quotes to prevent variables with spaces to break commands
	straightened elisp-comp()
	removed local Emacs variables
	16 Mar 2007
	Updated documentation on site-lisp dir.
	rephrased the fact that it is no real eclass
	30 Mar 2007
	Honour ${ROOT} in elisp-site-regen().

  10 Apr 2007; Christian Faulhammer <opfer@gentoo.org> elisp.eclass:
  document SIMPLE_ELISP

  08 Apr 2007; Christian Faulhammer <opfer@gentoo.org> elisp.eclass:
  remove SRC_URI pointing to mkennedy's devspace
