@@ -16,6 +16,9 @@ elisp-common.eclass
 	30 Mar 2007
 	Honour ${ROOT} in elisp-site-regen().
 
+  10 Apr 2007; Ulrich Mueller <ulm@kph.uni-mainz.de> elisp-common.eclass:
+  New function elisp_make_autoload_file().
+
   10 Apr 2007; Christian Faulhammer <opfer@gentoo.org> elisp.eclass:
   document SIMPLE_ELISP
 
